# hacs

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  SECURITY.md  hacs.json  package.json  pyproject.toml  release.config.cjs  requirements.txt
.codex/environments/: environment.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: continuous-delivery.yaml  continuous-integration.yaml
custom_components/hombee_air/: __init__.py  binary_sensor.py  catalog_translations.py  climate.py  config_flow.py  const.py  controller_time.py  coordinator.py  entity.py  manifest.json  modbus_client.py  number.py  registers.py  repairs.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/hombee_air/translations/: en.json  pl.json
scripts/: check_translations.py  generate_translations.py  ha_docker_smoke.sh  set_version.py  update-worktree-origin-main.sh  validate_structure.py
tests/: conftest.py  test_alarm_catalog.py  test_climate.py  test_config_flow.py  test_read_plan.py  test_translations.py  test_write_queue.py
